# Backend/Compugamer/Controllers/StudentController.cs
@@ -10,7 +10,6 @@ namespace Compugamer.Controllers
     [Route("[controller]")]
     public class StudentController : ControllerBase
     {
-        private static List<Student> students = new List<Student>();
         private readonly ILogger<StudentController> _logger;
         private readonly IStudentService _studentService;
 
@@ -24,50 +23,47 @@ namespace Compugamer.Controllers
         [HttpGet]
         public ActionResult<IEnumerable<Student>> GetAll()
         {
-            return Ok(students);
+            return Ok(_studentService.GetAll());
         }
 
         // Add a new student
         [HttpPost]
         public ActionResult<Student> Add(Student student)
         {
-            student.Id = students.Count > 0 ? students.Max(s => s.Id) + 1 : 1;
-            students.Add(student);
-            return CreatedAtAction(nameof(GetById), new { id = student.Id }, student);
+            // Verifica que el Dni no exista
+            var existing = _studentService.GetByDni(student.Dni);
+            if (existing != null)
+                return Conflict("El Dni ya existe.");
+
+            var created = _studentService.Add(student);
+            return CreatedAtAction(nameof(GetByDni), new { dni = created.Id }, created);
+
         }
 
-        // Get student by id    
-        [HttpGet("{id}")]
-        public ActionResult<Student> GetById(int id)
+        // Get student by Dni    
+        [HttpGet("{dni}")]
+        public ActionResult<Driver> GetByDni(int dni)
         {
-            var student = students.FirstOrDefault(s => s.Id == id);
-            if (student == null)
+            var driver = _studentService.GetByDni(dni);
+            if (driver == null)
                 return NotFound();
-            return Ok(student);
+            return Ok(driver);
         }
 
         // Edit student
-        [HttpPut("{id}")]
-        public ActionResult Edit(int id, Student updatedStudent)
+        [HttpPut("{dni}")]
+        public ActionResult Edit(int dni, Student updatedStudent)
         {
-            var student = students.FirstOrDefault(s => s.Id == id);
-            if (student == null)
+            if (!_studentService.Update(dni, updatedStudent))
                 return NotFound();
-
-            student.Name = updatedStudent.Name;
-            student.Age = updatedStudent.Age;
             return NoContent();
         }
 
         // Delete student
-        [HttpDelete("{id}")]
-        public ActionResult Delete(int id)
+        [HttpDelete("{dni}")]
+        public ActionResult Delete(int dni)
         {
-            var student = students.FirstOrDefault(s => s.Id == id);
-            if (student == null)
-                return NotFound();
-
-            students.Remove(student);
+            _studentService.Delete(dni);
             return NoContent();
         }
     }
