# Backend/Compugamer/Data/Models/Bus.cs
@@ -4,5 +4,9 @@
     {
         public int Id { get; set; }
         public string Plate { get; set; } = string.Empty;
+        public int? DriverDni { get; set; } // Dni del chofer asignado (puede ser null)
+        public List<int> StudentDnis { get; set; } = new(); // Dnis de estudiantes asignados
+
+
     }
 }
