# FrontEnd/src/swagger.json
@@ -190,6 +190,70 @@
         }
       }
     },
+    "/Bus/{busId}/assign-driver/{driverDni}": {
+      "post": {
+        "tags": [
+          "Bus"
+        ],
+        "parameters": [
+          {
+            "name": "busId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "driverDni",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/Bus/{busId}/assign-student/{studentDni}": {
+      "post": {
+        "tags": [
+          "Bus"
+        ],
+        "parameters": [
+          {
+            "name": "busId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "studentDni",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/Driver": {
       "get": {
         "tags": [
@@ -274,14 +338,14 @@
         }
       }
     },
-    "/Driver/{id}": {
+    "/Driver/{dni}": {
       "get": {
         "tags": [
           "Driver"
         ],
         "parameters": [
           {
-            "name": "id",
+            "name": "dni",
             "in": "path",
             "required": true,
             "schema": {
@@ -319,7 +383,7 @@
         ],
         "parameters": [
           {
-            "name": "id",
+            "name": "dni",
             "in": "path",
             "required": true,
             "schema": {
@@ -359,7 +423,7 @@
         ],
         "parameters": [
           {
-            "name": "id",
+            "name": "dni",
             "in": "path",
             "required": true,
             "schema": {
@@ -459,14 +523,14 @@
         }
       }
     },
-    "/Student/{id}": {
+    "/Student/{dni}": {
       "get": {
         "tags": [
           "Student"
         ],
         "parameters": [
           {
-            "name": "id",
+            "name": "dni",
             "in": "path",
             "required": true,
             "schema": {
@@ -504,7 +568,7 @@
         ],
         "parameters": [
           {
-            "name": "id",
+            "name": "dni",
             "in": "path",
             "required": true,
             "schema": {
@@ -544,7 +608,7 @@
         ],
         "parameters": [
           {
-            "name": "id",
+            "name": "dni",
             "in": "path",
             "required": true,
             "schema": {
@@ -573,6 +637,19 @@
           "plate": {
             "type": "string",
             "nullable": true
+          },
+          "driverDni": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "studentDnis": {
+            "type": "array",
+            "items": {
+              "type": "integer",
+              "format": "int32"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -581,6 +658,10 @@
         "type": "object",
         "properties": {
           "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "dni": {
             "type": "integer",
             "format": "int32"
           },
@@ -595,6 +676,11 @@
           "licenseNumber": {
             "type": "integer",
             "format": "int32"
+          },
+          "busId": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -606,6 +692,10 @@
             "type": "integer",
             "format": "int32"
           },
+          "dni": {
+            "type": "integer",
+            "format": "int32"
+          },
           "name": {
             "type": "string",
             "nullable": true
@@ -613,6 +703,11 @@
           "age": {
             "type": "integer",
             "format": "int32"
+          },
+          "busId": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
           }
         },
         "additionalProperties": false
